--- a/ProyectoNegocio/ProyectoNegocio.vbproj
+++ b/ProyectoNegocio/ProyectoNegocio.vbproj
@@ -61,6 +61,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caja\Abrir_Caja.vb" />
     <Compile Include="Combos.vb" />
     <Compile Include="Mantenedores\FamiliaProducto.vb" />
     <Compile Include="Mantenedores\Productos.vb" />
