--- a/delevery.vbproj
+++ b/delevery.vbproj
@@ -110,6 +110,12 @@
     <Compile Include="BE\producto.vb" />
     <Compile Include="BE\ticket.vb" />
     <Compile Include="BE\validador.vb" />
+    <Compile Include="CerrarCaja.Designer.vb">
+      <DependentUpon>CerrarCaja.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CerrarCaja.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DATASET\deliveryDataSet1.vb">
       <DependentUpon>deliveryDataSet1.xsd</DependentUpon>
     </Compile>
@@ -292,6 +298,9 @@
     <EmbeddedResource Include="AbrirCaja.resx">
       <DependentUpon>AbrirCaja.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CerrarCaja.resx">
+      <DependentUpon>CerrarCaja.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenedores\Buscar_producto.resx">
       <DependentUpon>Buscar_producto.vb</DependentUpon>
