--- a/ProyectoService/ProyectoService.vbproj
+++ b/ProyectoService/ProyectoService.vbproj
@@ -72,6 +72,7 @@
     <Compile Include="DAC\myhelper3.vb" />
     <Compile Include="DAC\myMSSQL.vb" />
     <Compile Include="Mantenedores\FamiliaProductoService.vb" />
+    <Compile Include="Mantenedores\ImpresoraService.vb" />
     <Compile Include="Mantenedores\ProductoService.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
