--- a/ProyectoService/ProyectoService.vbproj
+++ b/ProyectoService/ProyectoService.vbproj
@@ -73,6 +73,7 @@
     <Compile Include="DAC\myMSSQL.vb" />
     <Compile Include="Mantenedores\FamiliaProductoService.vb" />
     <Compile Include="Mantenedores\ImpresoraService.vb" />
+    <Compile Include="Mantenedores\OfertaService.vb" />
     <Compile Include="Mantenedores\ProductoService.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
