--- a/delevery.vbproj
+++ b/delevery.vbproj
@@ -112,6 +112,30 @@
     <Compile Include="BE\producto.vb" />
     <Compile Include="BE\ticket.vb" />
     <Compile Include="BE\validador.vb" />
+    <Compile Include="Caja\AdminCaja.Designer.vb">
+      <DependentUpon>AdminCaja.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Caja\AdminCaja.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Caja\AperturaCaja.Designer.vb">
+      <DependentUpon>AperturaCaja.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Caja\AperturaCaja.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Caja\Cierre_Caja.Designer.vb">
+      <DependentUpon>Cierre_Caja.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Caja\Cierre_Caja.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Caja\RetiroCaja.Designer.vb">
+      <DependentUpon>RetiroCaja.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Caja\RetiroCaja.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CerrarCaja.Designer.vb">
       <DependentUpon>CerrarCaja.vb</DependentUpon>
     </Compile>
@@ -346,11 +370,29 @@
     <Compile Include="Mantenedores\usuario.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Ventas\FrmCaja.Designer.vb">
+      <DependentUpon>FrmCaja.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Ventas\FrmCaja.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AbrirCaja.resx">
       <DependentUpon>AbrirCaja.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Caja\AdminCaja.resx">
+      <DependentUpon>AdminCaja.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Caja\AperturaCaja.resx">
+      <DependentUpon>AperturaCaja.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Caja\Cierre_Caja.resx">
+      <DependentUpon>Cierre_Caja.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Caja\RetiroCaja.resx">
+      <DependentUpon>RetiroCaja.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CerrarCaja.resx">
       <DependentUpon>CerrarCaja.vb</DependentUpon>
@@ -449,6 +491,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenedores\usuario.resx">
       <DependentUpon>usuario.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventas\FrmCaja.resx">
+      <DependentUpon>FrmCaja.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
