--- a/ProyectoService/ProyectoService.vbproj
+++ b/ProyectoService/ProyectoService.vbproj
@@ -68,6 +68,7 @@
     <Compile Include="BC\Codificador.vb" />
     <Compile Include="BC\RUTman.vb" />
     <Compile Include="Caja\AbrirCajaService.vb" />
+    <Compile Include="Caja\VentaCajaService.vb" />
     <Compile Include="CombosServices.vb" />
     <Compile Include="Conexion.vb" />
     <Compile Include="DAC\myhelper3.vb" />
