--- a/delevery.vbproj
+++ b/delevery.vbproj
@@ -98,12 +98,6 @@
     <Import Include="System.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbrirCaja.Designer.vb">
-      <DependentUpon>AbrirCaja.vb</DependentUpon>
-    </Compile>
-    <Compile Include="AbrirCaja.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="BC\RUTman.vb" />
     <Compile Include="BE\compra.vb" />
     <Compile Include="BE\Fpago.vb" />
@@ -134,12 +128,6 @@
       <DependentUpon>RetiroCaja.vb</DependentUpon>
     </Compile>
     <Compile Include="Caja\RetiroCaja.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CerrarCaja.Designer.vb">
-      <DependentUpon>CerrarCaja.vb</DependentUpon>
-    </Compile>
-    <Compile Include="CerrarCaja.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DATASET\deliveryDataSet1.vb">
@@ -346,10 +334,22 @@
       <DependentUpon>Rpt_CierreCaja.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ReportesVenta\Rpt_StockCritico.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Rpt_StockCritico.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ReportesVenta\Rpt_ticket.Designer.vb">
       <DependentUpon>Rpt_ticket.vb</DependentUpon>
     </Compile>
     <Compile Include="ReportesVenta\Rpt_ticket.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportesVenta\StockCritico.Designer.vb">
+      <DependentUpon>StockCritico.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ReportesVenta\StockCritico.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Retiro.Designer.vb">
@@ -390,10 +390,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AbrirCaja.resx">
-      <DependentUpon>AbrirCaja.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Caja\AdminCaja.resx">
       <DependentUpon>AdminCaja.vb</DependentUpon>
     </EmbeddedResource>
@@ -405,9 +401,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Caja\RetiroCaja.resx">
       <DependentUpon>RetiroCaja.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CerrarCaja.resx">
-      <DependentUpon>CerrarCaja.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="delivery.resx">
       <DependentUpon>delivery.vb</DependentUpon>
@@ -496,8 +489,15 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>Rpt_CierreCaja.vb</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportesVenta\Rpt_StockCritico.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Rpt_StockCritico.vb</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportesVenta\Rpt_ticket.resx">
       <DependentUpon>Rpt_ticket.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportesVenta\StockCritico.resx">
+      <DependentUpon>StockCritico.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Retiro.resx">
       <DependentUpon>Retiro.vb</DependentUpon>
