--- a/ProyectoService/ProyectoService.vbproj
+++ b/ProyectoService/ProyectoService.vbproj
@@ -78,6 +78,7 @@
     <Compile Include="Mantenedores\OfertaService.vb" />
     <Compile Include="Mantenedores\ProductoService.vb" />
     <Compile Include="Mantenedores\RetiroCajaService.vb" />
+    <Compile Include="Mantenedores\ServiceMantenimiento.vb" />
     <Compile Include="Mantenedores\VentasService.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
