--- a/delevery.vbproj
+++ b/delevery.vbproj
@@ -731,6 +731,10 @@
       <Project>{6f8cacc2-ff3a-40a2-8efd-c3c8d9b85b0f}</Project>
       <Name>ProyectoNegocio</Name>
     </ProjectReference>
+    <ProjectReference Include="ProyectoService\ProyectoService.vbproj">
+      <Project>{8e277694-ec57-41b6-99db-07f8e8be00aa}</Project>
+      <Name>ProyectoService</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
