--- a/delevery.vbproj
+++ b/delevery.vbproj
@@ -124,6 +124,24 @@
     <Compile Include="Caja\Cierre_Caja.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Caja\Reporte\Rpt_CierreCajaX.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Rpt_CierreCajaX.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Caja\Reporte\Rpt_ReporteZ.Designer.vb">
+      <DependentUpon>Rpt_ReporteZ.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Caja\Reporte\Rpt_ReporteZ.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Caja\Reporte\Rpt_Z.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Rpt_Z.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Caja\RetiroCaja.Designer.vb">
       <DependentUpon>RetiroCaja.vb</DependentUpon>
     </Compile>
@@ -486,6 +504,17 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Caja\Cierre_Caja.resx">
       <DependentUpon>Cierre_Caja.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Caja\Reporte\Rpt_CierreCajaX.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Rpt_CierreCajaX.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Caja\Reporte\Rpt_ReporteZ.resx">
+      <DependentUpon>Rpt_ReporteZ.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Caja\Reporte\Rpt_Z.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Rpt_Z.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Caja\RetiroCaja.resx">
       <DependentUpon>RetiroCaja.vb</DependentUpon>
