--- a/delevery.vbproj
+++ b/delevery.vbproj
@@ -470,7 +470,7 @@
     <Compile Include="Ventas\Reportes\Info_Productos.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ventas\Reportes\RPT_FormaPago.vb">
+    <Compile Include="ReportesVenta\RPT_FormaPago.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>RPT_FormaPago.rpt</DependentUpon>
@@ -658,7 +658,7 @@
     <EmbeddedResource Include="Ventas\Reportes\Info_Productos.resx">
       <DependentUpon>Info_Productos.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Ventas\Reportes\RPT_FormaPago.rpt">
+    <EmbeddedResource Include="ReportesVenta\RPT_FormaPago.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>RPT_FormaPago.vb</LastGenOutput>
     </EmbeddedResource>
